// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ColorPickerPanel should render correctly 1`] = `
<div>
  <div
    class="container"
    style="top: 100px; left: 100px;"
  >
    <div
      class="background"
    />
    <div
      class="presets"
    >
      <div>
        <div
          class="block"
          style="background-color: rgb(51, 51, 51);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(63, 81, 181);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(244, 67, 54);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 193, 7);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(139, 195, 74);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(33, 150, 243);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(0, 150, 136);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 152, 0);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(205, 220, 57);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(0, 188, 212);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 235, 59);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(233, 30, 99);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(103, 58, 183);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(3, 169, 244);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(156, 39, 176);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(96, 125, 139);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(158, 158, 158);"
        />
      </div>
    </div>
    <div
      class="pickr"
    />
    <div
      class="footer"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
        type="button"
      >
        <span>
          cancel
        </span>
        
      </button>
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
        type="button"
      >
        <span>
          okay
        </span>
        
      </button>
    </div>
  </div>
</div>
`;

exports[`test ColorPickerPanel when allow none 1`] = `
<div>
  <div
    class="container"
    style="top: 100px; left: 100px;"
  >
    <div
      class="background"
    />
    <div
      class="presets"
    >
      <div>
        <div
          class="block none"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(51, 51, 51);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(63, 81, 181);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(244, 67, 54);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 193, 7);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(139, 195, 74);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(33, 150, 243);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(0, 150, 136);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 152, 0);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(205, 220, 57);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(0, 188, 212);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 235, 59);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(233, 30, 99);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(103, 58, 183);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(3, 169, 244);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(156, 39, 176);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(96, 125, 139);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(158, 158, 158);"
        />
      </div>
    </div>
    <div
      class="pickr"
    />
    <div
      class="footer"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
        type="button"
      >
        <span>
          cancel
        </span>
        
      </button>
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
        type="button"
      >
        <span>
          okay
        </span>
        
      </button>
    </div>
  </div>
</div>
`;

exports[`test ColorPickerPanel when is printing 1`] = `
<div>
  <div
    class="container"
    style="top: 100px; left: 100px;"
  >
    <div
      class="background"
    />
    <div
      class="presets"
    >
      <div>
        <div
          class="block"
          style="background-color: rgb(159, 227, 255);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(230, 0, 126);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(255, 237, 0);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(29, 29, 27);"
        />
      </div>
      <div>
        <div
          class="block"
          style="background-color: rgb(226, 226, 226);"
        />
      </div>
    </div>
    <div
      class="pickr"
    />
    <div
      class="footer"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
        type="button"
      >
        <span>
          cancel
        </span>
        
      </button>
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
        type="button"
      >
        <span>
          okay
        </span>
        
      </button>
    </div>
  </div>
</div>
`;
